// Copyright 2014 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This proto is deprecated, and is only used for PVer3.
syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package safe_browsing;

// Everything below this comment was copied from the page
// <https://developers.google.com/safe-browsing/developers_guide_v3>,
// section "Full Hash Metadata".

// Metadata for the goog-malware-shavar list.
message MalwarePatternType {
  enum PATTERN_TYPE {
    TYPE_UNSPECIFIED = 0;
    LANDING = 1;
    DISTRIBUTION = 2;
  }

  required PATTERN_TYPE pattern_type = 1;
}

// Metadata for the goog-phish-shavar list.
message SocialEngineeringPatternType {
  enum PATTERN_TYPE {
    TYPE_UNSPECIFIED = 0;
    SOCIAL_ENGINEERING_ADS = 1;
    SOCIAL_ENGINEERING_LANDING = 2;
    PHISHING = 3;
  }

  optional PATTERN_TYPE pattern_type = 1;
}
